// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render HotspotRating with HIGH rating 1`] = `
<svg
  aria-hidden="false"
  aria-label="label"
  fill="none"
  height="16"
  role="img"
  style="clip-rule: evenodd; display: inline-block; fill-rule: evenodd; user-select: none; vertical-align: middle; stroke-linejoin: round; stroke-miterlimit: 1.414;"
  version="1.1"
  viewBox="0 0 16 16"
  width="16"
  xml:space="preserve"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <circle
    cx="8"
    cy="8"
    fill="rgb(254,205,202)"
    r="7"
  />
  <path
    d="M5 6.67113C5 6.56986 5.05583 6.47727 5.14421 6.43198L7.88334 5.02823C7.95678 4.99059 8.04322 4.99059 8.11666 5.02823L10.8558 6.43198C10.9442 6.47727 11 6.56986 11 6.67113V10.7324C11 10.9191 10.8181 11.0483 10.6475 10.9827L8.0916 10.0003C8.03254 9.97763 7.96746 9.97763 7.9084 10.0003L5.35247 10.9827C5.18192 11.0483 5 10.9191 5 10.7324V6.67113Z"
    fill="rgb(93,29,19)"
  />
</svg>
`;

exports[`should render HotspotRating with LOW rating 1`] = `
<svg
  aria-hidden="false"
  aria-label="label"
  fill="none"
  height="16"
  role="img"
  style="clip-rule: evenodd; display: inline-block; fill-rule: evenodd; user-select: none; vertical-align: middle; stroke-linejoin: round; stroke-miterlimit: 1.414;"
  version="1.1"
  viewBox="0 0 16 16"
  width="16"
  xml:space="preserve"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <circle
    cx="8"
    cy="8"
    fill="rgb(252,233,163)"
    r="7"
  />
  <path
    d="M5.23223 6.93223L8 9.7L10.7678 6.93223"
    stroke="rgb(102,64,15)"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.5"
  />
</svg>
`;

exports[`should render HotspotRating with MEDIUM rating 1`] = `
<svg
  aria-hidden="false"
  aria-label="label"
  fill="none"
  height="16"
  role="img"
  style="clip-rule: evenodd; display: inline-block; fill-rule: evenodd; user-select: none; vertical-align: middle; stroke-linejoin: round; stroke-miterlimit: 1.414;"
  version="1.1"
  viewBox="0 0 16 16"
  width="16"
  xml:space="preserve"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <circle
    cx="8"
    cy="8"
    fill="rgb(255,214,175)"
    r="7"
  />
  <path
    d="M10.7678 9.5 8 6.73223 5.23223 9.5"
    stroke="rgb(122,46,14)"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.5"
  />
</svg>
`;

exports[`should render HotspotRating with default LOW rating 1`] = `
<svg
  aria-hidden="false"
  aria-label="label"
  fill="none"
  height="16"
  role="img"
  style="clip-rule: evenodd; display: inline-block; fill-rule: evenodd; user-select: none; vertical-align: middle; stroke-linejoin: round; stroke-miterlimit: 1.414;"
  version="1.1"
  viewBox="0 0 16 16"
  width="16"
  xml:space="preserve"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <circle
    cx="8"
    cy="8"
    fill="rgb(252,233,163)"
    r="7"
  />
  <path
    d="M5.23223 6.93223L8 9.7L10.7678 6.93223"
    stroke="rgb(102,64,15)"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.5"
  />
</svg>
`;
